# liblooklike

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  README  README.md  index.html
cmake/: FindDot.cmake  FindPlantUml.cmake
data/photos/: source.txt
doc/: CMakeLists.txt  Doxyfile.in  LibLookLike.md  computation_tree.md  mainpage.md  matrix_mem_representation.md  tree_evaluation.md  tridiagonalize_symmetric_matrix.c  tutorial1.md  tutorial12.md  tutorial2.md  tutorials.md
doc/algorithms/: acp.r  dac.r  eigenvectors2*2.r  givens.r  givens.r~  householder.r  householder.r~  normalisation.r  pca.py  secular_equation.r  test.r  tests.r  utils.r  utils.r~
doc/papers/: LibLookLike.md  tutorial1.md  tutorial12.md  tutorial2.md
examples/: real.cpp  real.h  test_algorithm.cpp  test_mathexpression.cpp
examples/example1/: real.cpp  real.h  test_algorithm.cpp
examples/example2/: real.cpp  real.h  test_algorithm.cpp
examples/example3/: real.cl  real.cpp  real.h  test_algorithm.cpp
html/: Algorithm.html  Expression.html  algorithm.html  algorithm_8h.html  algorithm_8h__dep__incl.map  algorithm_8h__dep__incl.md5  algorithm_8h__incl.map  algorithm_8h__incl.md5  algorithm_8h_source.html  annotated.html  clalgorithm_8hpp.html  clalgorithm_8hpp__dep__incl.map  clalgorithm_8hpp__dep__incl.md5  clalgorithm_8hpp__incl.map  clalgorithm_8hpp__incl.md5  clalgorithm_8hpp_source.html  classAlgorithm-members.html  classAlgorithm.html  classAlgorithm__coll__graph.map  classAlgorithm__coll__graph.md5  classAlgorithm__inherit__graph.map  classAlgorithm__inherit__graph.md5  classCLError-members.html  classCLError.html  classCLError__coll__graph.map  classCLError__coll__graph.md5  classCLError__inherit__graph.map  classCLError__inherit__graph.md5  classCLInterDistance-members.html  classCLInterDistance.html  classCLInterDistance__coll__graph.map  classCLInterDistance__coll__graph.md5  classCLInterDistance__inherit__graph.map  classCLInterDistance__inherit__graph.md5  classCLMatrix-members.html  classCLMatrix.html  classCLMatrixCovariance-members.html  classCLMatrixCovariance.html  classCLMatrixCovariance__coll__graph.map  classCLMatrixCovariance__coll__graph.md5  (+238 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  (+13 more)
include/: algorithm.h  clalgorithm.hpp  clmatrix.hpp  clmatrixnorm.hpp  clmatrixoperations.hpp  context.h  eigenpair.hpp  eigens2*2.hpp  errorstrings  exception.h  expression.h  expression.hpp  file.h  files.hpp  givens.hpp  image.h  jpegfile.h  mathexpression.h  matrix.h  matrixImportExport.h  matrixnorm.hpp  openglwindow.hpp  operation.h  previewwindow.hpp  simplematrix.hpp  sort.hpp
kernels/: givens.cl  householder.cl  matrix_mult.cl  matrix_norm.cl  scalar_product.cl
src/: CMakeLists.txt  CMakeLists.txt~  algorithm.cpp  clalgorithm.cpp  clmatrix.cpp  clmatrixnorm.cpp  clmatrixoperations.cpp  context.cpp  eigenpair.cpp  eigens2*2.cpp  exception.cpp  expression.cpp  file.cpp  files.cpp  givens.cpp  image.cpp  img2eigvec.cpp  imgprojection.cpp  jpegfile.cpp  mathexpression.cpp  matrix.cpp  matrixImportExport.cpp  matrixnorm.cpp  openglwindow.cpp  previewwindow.cpp
tests/: CMakeLists.txt  CMakeLists.txt~  geany_run_script.sh  matrix_mult.cl  matrix_norm.cl  real.cpp  real.h  test_algorithm2.cpp  test_cl.cpp  test_clmatrix.cpp  test_clmatrixnorm.cpp  test_clmatrixoperations.cpp  test_context.cpp  test_eigenpair.cpp  test_file.cpp  test_files.cpp  test_kernel.cl  test_mathexpression.cpp  test_mathexpression2.cpp  test_matrix.cpp  test_matrixImportExport.cpp  test_preview.cpp  test_real.cl  test_sort.cpp
tools/: LibLookLike.sh
tutorials/developing/: a.out  real.cpp  realoperations.cpp  realoperations.h  tutorial2.cpp
tutorials/opencl/: a.out  clexample.cpp
tutorials/usage/: real.cpp  real.h  realoperations.cpp  realoperations.h  tutorial1.cpp
